menu (2.1.47) unstable; urgency=low

  * The "unreleased" release
  * debian/control
    + Bump Standards-Version to 3.9.5.

 -- Bill Allombert <ballombe@debian.org>  Tue, 03 Jun 2014 20:53:53 +0200

menu (2.1.46) unstable; urgency=low

  * The "Marseille" release.
  * Handling of l10n by Christian Perrier:
    + Programs translations:
      - Ukrainian updated by Serhij Dubyk.
      - Brazilian Portuguese updated by Sérgio Cipolla.
        Closes: #623121
    + su-to-root translations:
      - Ukrainian updated by Serhij Dubyk.
      - Brazilian Portuguese updated by Sérgio Cipolla.
        Closes: #623121
    + Menu sections translations:
      - Ukrainian updated by Serhij Dubyk.
      - Brazilian Portuguese updated by Sérgio Cipolla.
        Closes: #623121
      - Danish updated by Joe Dalton. Closes: #624656

  * doc/menu.sgml:
    + Fix typo in chapter 3.7. Thanks Hideki Yamane. Closes: #625736
  * update-menus/update-menus.cc
    + 'update-menus --remove' failed to remove lock file.
       Thanks Dave Steele. Closes: #648268
  * debian/control
    + Bump Standards-Version to 3.9.2.

 -- Bill Allombert <ballombe@debian.org>  Wed, 16 Nov 2011 12:33:27 +0100

menu (2.1.45) unstable; urgency=low

  * The "no ghost" release 
  * Handling of l10n by Christian Perrier:
    + Programs translations:
      - Danish updated. Closes: #609583
  * su-to-root: add support for gksudo and kdesudo. Closes: #604085, #602118.
  * update-menus/update-menus.cc:
    + option --menufilesdir: do not require a trailing slash. Closes: #595032.
  * debian/prerm:
    + automatically remove generate system menu files when menu is removed.
      Closes: #305764, #592441.
  * update-menus/parsestream.cc:
    + catch endoffile exception in init method, thanks Renzo Davoli.

 -- Bill Allombert <ballombe@debian.org>  Mon, 07 Mar 2011 11:58:39 +0100

menu (2.1.44) unstable; urgency=low

  * The "Bordeaux" release.
  * Handling of l10n by Christian Perrier:
    + Menu sections translations: